--- a/Kontakt.html
+++ b/Kontakt.html
@@ -9,8 +9,7 @@
   <body>
     <header>
       <div>
-        <!-- Placeholder Hauptimage -->
-        <a href="index.html"
+        <a href="Home.html"
           ><img
             class="main-logo"
             src="/images/logo.png"
@@ -22,7 +21,7 @@
         </label>
         <nav>
           <ul>
-            <li><a id="menu" href="Home.html">Home</a></li>
+            <li><a id="menu" href="index.html">Home</a></li>
             <li>
               <a id="menu" href="Physiotherapeutin.html">Physiotherapeutin</a>
             </li>
@@ -43,7 +42,7 @@
         <br /><br />
         Ihre Physiotherapie Kerstin Ziemer
         <br /><br />
-        E-Mail: k.ziemer@gmx.de
+        E-Mail: <a href="mailto:k.ziemer@gmx.de">k.ziemer@gmx.de</a>
         <br /><br />
         Telefon: +49 (0) 30 - 916 40 20
         <br />
@@ -72,7 +71,7 @@
           <br />
           Mobil: 0172 / 48 32 763
           <br />
-          E-Mail: k.ziemer@gmx.de
+          E-Mail: <a href="mailto:k.ziemer@gmx.de">k.ziemer@gmx.de</a>
         </p>
       </section>
       <section class="section-footer">
@@ -88,7 +87,7 @@
       <section class="section-footer">
         <h4>Überblick</h4>
         <p>
-          <a href="./Home.html">HOME</a>
+          <a href="./index.html">HOME</a>
           <br />
           <a href="./Physiotherapeutin.html">PHYSIOTHERAPEUTIN</a>
           <a href="./Praxis.html">PRAXIS</a>
