--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <body>
     <header>
       <div>
-        <!-- Placeholder Hauptimage -->
-        <a href="index.html"
+        <a href="Home.html"
           ><img
             class="main-logo"
             src="/images/logo.png"
@@ -84,7 +83,7 @@
           <br />
           Mobil: 0172 / 48 32 763
           <br />
-          E-Mail: k.ziemer@gmx.de
+          E-Mail: <a href="mailto:k.ziemer@gmx.de">k.ziemer@gmx.de</a>
         </p>
       </section>
       <section class="section-footer">
