--- a/Kontakt.html
+++ b/Kontakt.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div>
-        <a href="Home.html"
+        <a href="index.html"
           ><img
             class="main-logo"
             src="/images/logo.png"
