--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div>
-        <a href="Home.html"
+        <a href="index.html"
           ><img
             class="main-logo"
             src="/images/logo.png"
@@ -21,7 +21,7 @@
         </label>
         <nav>
           <ul>
-            <li><a style="color: black" id="menu" href="Home.html">Home</a></li>
+            <li><a style="color: black" id="menu" href="index.html">Home</a></li>
             <li>
               <a id="menu" href="Physiotherapeutin.html">Physiotherapeutin</a>
             </li>
@@ -99,7 +99,7 @@
       <section class="section-footer">
         <h4>Überblick</h4>
         <p>
-          <a style="color: #5eaec3" href="./Home.html">HOME</a>
+          <a style="color: #5eaec3" href="./index.html">HOME</a>
           <br />
           <a href="./Physiotherapeutin.html">PHYSIOTHERAPEUTIN</a>
           <a href="./Praxis.html">PRAXIS</a>
