--- a/Physiotherapeutin.html
+++ b/Physiotherapeutin.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div>
-        <a href="Home.html"
+        <a href="index.html"
           ><img
             class="main-logo"
             src="/images/logo.png"
@@ -21,7 +21,7 @@
         </label>
         <nav>
           <ul>
-            <li><a id="menu" href="Home.html">Home</a></li>
+            <li><a id="menu" href="index.html">Home</a></li>
             <li>
               <a style="color: black" id="menu" href="Physiotherapeutin.html"
                 >Physiotherapeutin</a
@@ -82,7 +82,7 @@
       <section class="section-footer">
         <h4>Überblick</h4>
         <p>
-          <a href="./Home.html">HOME</a>
+          <a href="./index.html">HOME</a>
           <br />
           <a style="color: #5eaec3" href="">PHYSIOTHERAPEUTIN</a>
           <a href="./Praxis.html">PRAXIS</a>
