--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="index.html"
           ><img
             class="main-logo"
-            src="/images/logo.png"
+            src="/images/logo.jpg"
             alt="Bild vom Praxislogo"
         /></a>
         <input type="checkbox" id="menu-checkbox" />
